spent an outrageous amount of time on edit workout exercises, but it is functional

--- a/FitLyfeDjango/docs/src/templates/workouts.html
+++ b/FitLyfeDjango/docs/src/templates/workouts.html
@@ -8,4 +8,5 @@
     <p>{{ info.sets_completed }} sets</p>
     <p>{{ info.total_reps_achived }} reps total</p>
   </div>
+  <p><a href='/#/workouts/{{item.id}}'>Edit Workout</button></p>
 </div>
