moved docs folder out one level for gh-pages

--- a/docs/src/templates/register.html
+++ b/docs/src/templates/register.html
@@ -1,3 +1,4 @@
+<div ng-include="'src/templates/nav.html'" ng-controller='navCtrl as nav'></div>
 <h1>{{loginTitle}}</h1>
 <label>username</label>
 <input ng-model="username" type='text'>
