--- a/docs/src/templates/nav.html
+++ b/docs/src/templates/nav.html
@@ -1,14 +1,15 @@
 <nav class='navbar navbar-default nav-body'>
   <div class='container-fluid'>
-    <div class="col-sm-8 navbar-header">
-      <h3><a href='/#/'>FitLyfe</a></h3>
+    <div class="col-sm-7 navbar-header">
+      <h3><a href='/'>FitLyfe</a></h3>
     </div>
 
-    <div class='col-sm-4'>
+    <div class='col-sm-5'>
       <ul class='nav navbar-nav'>
         <li><a href="/#/">Home</a></li>
         <li><a href="/#/login">Login</a></li>
         <li><a href="/#/register">Register</a></li>
+        <li><a href="/#/in_development">Your Workouts</a></li>
         <li><a href="" ng-click="logout()">Logout</a></li>
       </ul>
     </div>
