fix routing issues

--- a/docs/src/templates/nav.html
+++ b/docs/src/templates/nav.html
@@ -6,10 +6,10 @@
 
     <div class='col-sm-5'>
       <ul class='nav navbar-nav'>
-        <li><a href="benwilburn.com/#/">Home</a></li>
-        <li><a href="benwilburn.com/#/login">Login</a></li>
-        <li><a href="benwilburn.com/#/register">Register</a></li>
-        <li><a href="benwilburn.com/#/in_development">Your Workouts</a></li>
+        <li><a href="/#/">Home</a></li>
+        <li><a href="/#/login">Login</a></li>
+        <li><a href="/#/register">Register</a></li>
+        <li><a href="/#/in_development">Your Workouts</a></li>
         <li><a href="" ng-click="logout()">Logout</a></li>
       </ul>
     </div>
